# FGengine

./: CMakeLists.txt  LICENSE  README.md
include/FGengine/: FGengine.hpp  main.hpp
include/FGengine/objects/: camera.hpp  model.hpp  objects.hpp  window.hpp
include/FGengine/properties/: mesh.hpp  transform.hpp  worldpoint.hpp
include/FGengine/renderable/: camera.hpp  model.hpp
include/FGengine/scene/: scene.hpp
include/FGengine/shaders/: shader.hpp  uniform.hpp
include/FGengine/special/: defaults.hpp  scene.hpp  (+4 more)
src/: CMakeLists.txt  main.cpp
src/mechanics/camRotation/: CMakeLists.txt  camRotation.cpp  camRotation.hpp
src/mechanics/walking/: CMakeLists.txt  walking.cpp  walking.hpp
src/objects/: CMakeLists.txt
src/objects/window/: cycle.cpp  drawing.cpp  events.cpp  flags.cpp  main.cpp  minsize.cpp  position.cpp  size.cpp  title.cpp  vsync.cpp  windowdatanames.hpp
src/shaders/: CMakeLists.txt  compilation.cpp  compilation.hpp  shader.cpp  uniform.cpp
src/special/: CMakeLists.txt  defaults.cpp  defaults.hpp
src/special/shaders/: CMakeLists.txt  compilation.cpp  compilation.hpp  uniform.cpp
src/special/window/: CMakeLists.txt  cycle.cpp  drawing.cpp  events.cpp  flags.cpp  main.cpp  minsize.cpp  position.cpp  size.cpp  title.cpp  vsync.cpp  windowdatanames.hpp
src/structures/: CMakeLists.txt  fps.cpp  frametime.cpp  uniform.cpp
src/window/: CMakeLists.txt  cycle.cpp  drawing.cpp  events.cpp  flags.cpp  main.cpp  minsize.cpp  position.cpp  size.cpp  title.cpp  vsync.cpp  window.cpp  windowBase.cpp
src/window/scene/: CMakeLists.txt  scene.cpp
(+45 files in other folders)
